# docs/swagger.json
@@ -113,12 +113,13 @@
                     },
                     {
                         "enum": [
-                            "TODAY",
-                            "THIS_WEEK"
+                            "today",
+                            "this_week",
+                            "this_month"
                         ],
                         "type": "string",
                         "description": "date",
-                        "name": "enumstring",
+                        "name": "time",
                         "in": "query"
                     }
                 ],
